--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": "eslint --cache --fix",
     "*.{js,ts,css,md}": "prettier --write"
-  }
+  },
+  "repository": "git@github.com:hwaphon/morjs.git"
 }
